classDiagram
direction LR

class League {
  -String leagueName
  -List<Team> teams
  -List<Game> schedule
  +League(String leagueName)
  +getLeagueName() String
  +setLeagueName(String leagueName)
  +getTeams() List~Team~
  +addTeam(Team team)
  +getSchedule() List~Game~
  +setSchedule()
  +addGame(Game game)
}

class Team {
  -String name
  -double budgetUsage
  -double budget
  -List<Player> players
  +canAfford(amount) bool
  +addPlayer(player)
  +removePlayer(player)
}

class Player {
  -String name
  -double salary
  -Team currentTeam
  +requestTrade(targetTeam)
  +changeSalary(newSalary)
}

class Commissioner {
  -String name
  +setSchedule(league)
  +movePlayer(player, toTeam)
  +changePlayerSalary(player, newSalary)
  +approveTrade(request)
}

class Game {
  -int gameID
  -Date gameDate
  -boolean finished
  -int homeScore
  -int awayScore
  -Team homeTeam
  -Team awayTeam
  +Game(int gameID, Date gameDate, Team homeTeam, Team awayTeam)
  +getGameID() int
  +finishGame()
  +isFinished() bool
  +getGameDetails() List~String~
}

class TradeRequest {
  -Player player
  -Team targetTeam
  -String status
  +approve()
  +reject()
}

League "1" o-- "*" Team
League "1" o-- "*" Game
Team "1" o-- "*" Player
Game "*" --> "1" Team : homeTeam
Game "*" --> "1" Team : awayTeam
Player "*" --> "1" Team : currentTeam
Player "1" --> "*" TradeRequest : creates
TradeRequest "*" --> "1" Team : targetTeam
Commissioner ..> League : manages
Commissioner ..> Player : changes salary
Commissioner ..> Team : moves players
Commissioner ..> TradeRequest : approves